src/pages/square/[boardName]/editor/style.module.scss
@use '@/assets/styles/main' as *;

.eodiro-new-post {
  max-width: 70rem !important;
  min-height: 100vh !important;
  padding-bottom: 0 !important;

  textarea {
    background: transparent;
    height: auto;
    overflow: hidden;
  }

  .title,
  .body {
    border: none;
    box-shadow: none;
    padding: 0;
    border-radius: unset;
    font-size: 1.15rem;
    min-width: 0;
    display: inline-block;
    min-width: 0px;
  }

  .title {
    font-size: 1.7rem;
    font-weight: 600;
    height: 2.5em;
    margin-bottom: 1rem;
    padding: 1rem 0;

    @include on-mobile {
      font-size: 25px !important;
    }
  }

  .body-container,
  .title-container {
    position: relative;

    .body {
      line-height: 1.4;
      // min-height: 50vh;
      height: 1.3em;
      padding-bottom: 40vh;
    }

    .shadow {
      position: absolute;
      top: 0;
      left: 0;
      margin: 0;
      visibility: hidden;
    }
  }

  .upload-btn {
    background-color: $eodiro-green-2;
    color: #fff;
    border-radius: 50px;
    width: 3.8rem;
    height: 3.8rem;
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    left: 1.5rem;
    bottom: 1.5rem;
    font-size: 1.5rem;
    @include clickable;
  }
}

.eodiro-new-post {
  .edit-section {
    flex: 1;
  }

  // Upload section
  .upload-section {
    margin-left: 1.5rem;
    width: 17rem;

    .close {
      @include elm-fill-distinct;
      font-size: 2rem;
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      z-index: 10;
      @include no-mobile {
        display: none;
      }
    }

    .header {
      font-size: 1.5rem;
      padding-top: 1.2rem;
      padding-bottom: 1rem;
      margin-bottom: 0.5rem;
      @include resolve-optical-illusion-both;
      background-color: #fff;
      @include dark-mode {
        background-color: #000;
      }
      @include on-mobile {
        padding-top: 5rem;
      }
    }

    // Hide default input element
    .input-file {
      pointer-events: none;
      position: fixed;
      visibility: hidden;
    }

    .file-upload-label {
      display: flex;
      align-items: center;
      justify-content: center;
      background-color: $eodiro-blue-1;
      font-weight: 400;
      @include border-radius-outer;
      padding: 0.8rem;
      color: #fff;
      @include clickable;
      margin-bottom: 1.5rem;
    }

    .files-container {
      padding-bottom: 5rem;

      .file {
        @include elm-fill-distinct;
        padding: 0.7rem;
        @include border-radius-outer;
        margin-bottom: 0.7rem;

        .file-name {
          word-break: break-all;

          &.failed {
            color: $base-gray;
          }
        }

        .err-msg {
          color: red;
          font-size: 0.9rem;
          font-weight: 500;
          margin-bottom: 0.2rem;
        }
      }

      .remove {
        margin-right: 0.7rem;
        color: red;
      }
    }

    .information {
      @include elm-fill-distinct;
      padding: 1rem;
      @include border-radius-outer;

      .more {
        @include separator('top');
        margin-top: 1rem;
        padding-top: 1rem;
        color: $eodiro-blue-1;
        width: 100%;
      }
    }

    @include on-mobile {
      @include bg-black-and-white;
      position: fixed;
      margin: 0;
      padding: 1.2rem;
      padding-top: 0;
      z-index: 99999;
      left: 0;
      width: 100%;
      bottom: 0;
      height: 100%;
      overflow-y: auto;
      transform: translateY(100%);
      transition: transform 500ms cubic-bezier(0.42, 0.18, 0.15, 1);

      &.opened {
        transform: translateY(0%);
      }
    }
  }

  .upload-file-btn {
    background-color: $eodiro-blue-1;
    color: #fff;
    border-radius: 50px;
    width: 3.8rem;
    height: 3.8rem;
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    right: 1.5rem;
    bottom: 1.5rem;
    font-size: 1.8rem;
    @include clickable;
    display: none;

    @include on-mobile {
      display: block;
    }
  }
}

